IoT Activity 추가, 하단 버튼 이용, 로그인 상태일때만 IoT Activity 생행되도록 구현

--- a/SkyObserver/app/src/main/AndroidManifest.xml
+++ b/SkyObserver/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".iot.IoT"></activity>
         <activity android:name=".statistics.sejong" />
         <activity android:name=".statistics.jeju" />
         <activity android:name=".statistics.gyeongnam" />
