--- a/SkyObserver/app/src/main/AndroidManifest.xml
+++ b/SkyObserver/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".iot.PIcam"></activity>
+        <activity android:name=".menu_main"></activity>
+        <activity android:name=".iot.PIcam" />
         <activity android:name=".statistics.Region" />
         <activity
             android:name=".statistics.Statistics"
